<resources>
    <string name="app_name">Talkie</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">password</string>
    <string name="username">User Name</string>
    <string name="location">location</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already Have An Account? |</string>
    <string name="login">Login</string>
    <string name="login_text">Welcome Back , \nLogin To Continue</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">dont have an account?  |</string>
    <string name="register">Register An Account \n To Get Started</string>
    <string name="choose_profile_pic">Choose Your Profile Image</string>
    <string name="share_thoughts">Share Your Thoughts…</string>
    <string name="home_title">Home</string>
    <string name="hello_penguins_lovers">Hello Penguins Lovers</string>
    <string name="hello_am_using_twitter">Hello Am using twitter</string>
    <string name="follow">follow</string>
    <string name="unfollow">unfollow</string>
    <string name="following">FOLLOWING</string>
    <string name="people_you_may_know">People You May Know</string>
    <string name="post_tweet">Post Tweet</string>
</resources>
