<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FollowingPageActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        android:id="@+id/followingToolbar"/>

    <TextView
        android:id="@+id/new_userTV"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/people_you_may_know"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textSize="22sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/new_userTV"
        android:orientation="vertical"
        android:id="@+id/new_user_linearLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView"/>
    </LinearLayout>

    <TextView
        android:id="@+id/following_tv"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_below="@+id/new_user_linearLayout"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/following"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:id="@+id/following_listView"
        android:layout_below="@+id/following_tv"
        />


</RelativeLayout>